--- a/style.css
+++ b/style.css
@@ -23,6 +23,12 @@
   width: 20%;
 }
 
+#google{
+    width: 100%;
+    height: 100%;
+}
+
+
 #textbox{
 
     background-image: url("magnifier.png");
