--- a/style.css
+++ b/style.css
@@ -1,3 +1,4 @@
+@media (min-width:500px) {
 .naviimg{
     object-fit: fill;
     height: 20px;
@@ -43,7 +44,7 @@
     margin-left: auto;
     margin-right: auto;
     margin-top: 20px;
-    border-radius: 6mm;
+    border-radius: 5mm;
     height: 35px;
     width: 40%;
     border-color: rgb(236, 236, 246);
@@ -86,6 +87,78 @@
 .translate{
     text-decoration: none;
 }
+}
+
+@media (max-width: 499px){
+    .naviimg{
+
+        display: none;
+    }
+    
+    .uptext{
+        display: none;
+    }
+    
+    
+    #image{
+      display: block;
+      margin-top: 65px;
+      margin-left: auto;
+      margin-right: auto;
+      width: 40%;
+    }
+    
+    #google{
+        width: 100%;
+        height: 100%;
+    }
+    
+    
+    #textbox{
+    
+        background-image: url("magnifier.png");
+        background-position: right top;
+        background-repeat: no-repeat;
+        background-size: contain;
+        
+    
+    
+    
+        display: block;
+        margin-left: auto;
+        margin-right: auto;
+        margin-top: 20px;
+        border-radius: 5mm;
+        height: 20px;
+        width: 70%;
+        border-color: rgb(236, 236, 246);
+        border-width: 1px;
+        padding-left: 20px;
+        padding-right: 20px;
+    }
+    
+    
+    #btn{
+        visibility: hidden;
+    }
+    
+    
+    #lowertext{
+
+        margin-left: auto;
+        margin-right: auto;
+        width: fit-content;
+        font-size:3vw;
+        margin-top: 40px;
+        text-align: center;
+        
+        
+    }
+    
+    .translate{
+        text-decoration: none;
+    }
+}
 
 /*
 .boto{
@@ -112,4 +185,5 @@
     border: 1px solid darkgrey;
 
 }
+
 
